Tags content and tags order fixed

--- a/redoc/evotor-callbacks.yaml
+++ b/redoc/evotor-callbacks.yaml
@@ -18,7 +18,9 @@ tags:
   - name: Учётные записи в стороннем сервисе
     description: |
       Запросы от облака Эвотор к стороннему сервису для управления учётными записями.
-  - name: Сущности пользователя платформы Эвотор
+  - name: Биллинг
+    description: Запросы и события связанные с биллингом пользователей платформы и сторонних сервисов.
+  - name: Сущности пользователя Эвотор
     description: |
       Изменения в Личном  кабинете пользователя платформы Эвотор дублируются в стороннем сервисе. Для дублирования, облако Эвотор обращается к стороннему сервису с запросами на создание / редактирование магазинов, сотрудников и терминалов.
   - name: Товары и документы
@@ -27,8 +29,6 @@ tags:
     description: Запросы для поиска товаров в базе стороннего сервиса по штрихкоду или алкокоду (коду алкогольной продукции).
   - name: Передача чека
     description: Передача упрощенной структуры документа в сторонний сервис.
-  - name: Биллинг
-    description: Запросы и события связанные с биллингом пользователей платформы и сторонних сервисов.
 host: partner.com
 schemes:
   - https
@@ -413,7 +413,7 @@ paths:
   /api/v1/receipt:
     post:
       tags:
-        - Отправка чека
+        - Передача чека
       summary: После оплаты, передаёт чек стороннему сервису.
       description: |
         В теле запроса передаётся состав одного или нескольких чеков.
