Tags order and content fised. Link to docs fixed

--- a/evotor-callbacks.yaml
+++ b/evotor-callbacks.yaml
@@ -13,22 +13,22 @@ info:
 
       После запросов `/create`, `/verify`, `/tariff`, сторонний сервис сообщает облаку Эвотор токен пользователя, который необходим, чтобы авторизовать все запросы облака, кроме `/create`, `/verify`, `/tariff`.
 
-      Сторонний веб-сервис также может обращаться в облако Эвотор за дополнительной информацией. Токен для авторизации таких запросов, облако Эвотор отправляет на адрес `http://<веб-адрес стороннего сервиса>/api/v1/user/token`. Подробнее, см. раздел "Авторизация" на странице [REST API облака Эвотор](https://dev.evotor.r1nat.com/evotor-cloud-rest-api/)
+      Сторонний веб-сервис также может обращаться в облако Эвотор за дополнительной информацией. Токен для авторизации таких запросов, облако Эвотор отправляет на адрес `http://<веб-адрес стороннего сервиса>/api/v1/user/token`. Подробнее, см. раздел "Авторизация" на странице [REST API облака Эвотор](https://developer.evotor.ru/evotor-cloud-rest-api/)
 tags:
   - name: Учётные записи в стороннем сервисе
     description: |
       Запросы от облака Эвотор к стороннему сервису для управления учётными записями.
-  - name: Сущности пользователя платформы Эвотор
+  - name: Биллинг
+    description: Запросы и события связанные с биллингом пользователей платформы и сторонних сервисов.
+  - name: Сущности пользователя Эвотор
     description: |
       Изменения в Личном  кабинете пользователя платформы Эвотор дублируются в стороннем сервисе. Для дублирования, облако Эвотор обращается к стороннему сервису с запросами на создание / редактирование магазинов, сотрудников и терминалов.
   - name: Товары и документы
     description: Вызовы к системе партнера в контексте товароучетных сущностей
   - name: Поиск товара
     description: Запросы для поиска товаров в базе стороннего сервиса по штрихкоду или алкокоду (коду алкогольной продукции).
-  - name: Передача чека
-    description: Передача упрощенной структуры документа в сторонний сервис.
-  - name: Биллинг
-    description: Запросы и события связанные с биллингом пользователей платформы и сторонних сервисов.
+  - name: Отправка чека
+    description: Отправляет в сторонний сервис упрощенную структуру документа.
 host: partner.com
 schemes:
   - https
@@ -414,7 +414,7 @@ paths:
     post:
       tags:
         - Отправка чека
-      summary: После оплаты, передаёт чек стороннему сервису.
+      summary: После оплаты, отправляет чек стороннему сервису.
       description: |
         В теле запроса передаётся состав одного или нескольких чеков.
       parameters:
