--- a/evotor-callbacks.yaml
+++ b/evotor-callbacks.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: 1.0.2
+  version: 1.0.3
   title: Протокол исходящих запросов
   description: |
     Этот раздел содержит описание адресов, которые должен поддерживать REST API стороннего сервиса, чтобы получать определённую информацию от облака Эвотор. Сторонний сервис должен авторизовать HTTP-запросы от облака.
@@ -414,9 +414,9 @@ paths:
     post:
       tags:
         - Отправка чека
-      summary: После оплаты, отправляет чек стороннему сервису.
+      summary: Отправить чек
       description: |
-        В теле запроса передаётся состав одного или нескольких чеков.
+        После оплаты отправляет чек в сторонний сервис. Тело запроса содержит один или несколько чеков.
       parameters:
         - $ref: '#/parameters/clientAuth'
         - name: receipt
