--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -137,7 +137,7 @@ paths:
   post:
     tags:
       - Товары и документы
-    summary: Удалить товар из списка
+    summary: Удалить товар
     description: |
       HTTP-запрос с пустым телом удалит все товары в магазине.
       Чтобы удалить определённый товар, в теле HTTP-запроса требуется указать его UUID.
