Warning to "x-total-items-count" header added

--- a/evotor-callbacks.yaml
+++ b/evotor-callbacks.yaml
@@ -307,6 +307,7 @@ paths:
             X-Total-Items-Count:
               description: |
                 Общее количество элементов в многостраничной выборке. Возвращается, если в запросе указаны параметры `page` и `size`.
+                > Число возвращаемых элементов, должно совпадать с числом, указанным в заголовке.
               type: integer
               minimum: 0
             X-Pagination-Page-Size:
