--- a/evotorRestApi/definitions.yaml
+++ b/evotorRestApi/definitions.yaml
@@ -29,9 +29,9 @@ product:
   properties:
     uuid:
       type: string
-      description: UUID товара, уникальный в рамках магазина.
+      description: Идентификатор товара в формате uuid4, уникальный в рамках магазина.
       pattern: >-
-        ^[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}$
+        ^[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$
     code:
       type: string
       description: Код товара или группы товаров
@@ -118,9 +118,9 @@ product:
     parentUuid:
       type: string
       pattern: |
-        ^[a-fA-F0-9]{8}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{4}-[a-fA-F0-9]{12}$
+        ^[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$
       description: |
-        UUID группы товаров, к которой относится товар или другая группа товаров. Может принимать значение null, если товар или группа находятся в корне иерархии.
+        Идентификатор группы товаров в формате uuid4, к которой относится товар или другая группа товаров. Может принимать значение null, если товар или группа находятся в корне иерархии.
     group:
       type: boolean
       description: |
